# SmartCarRobotv4_Elegoo_Py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
apps/obstacle_avoidance/: __init__.py  main.py
src/: __init__.py  camera.py  connection.py  mpuPlot.py  mpu_plot.py  myCar.py  obstacleAvoidance.py  robotCommands.py
tests/: maine.py
