[project]
name = "src"
version = "0.1.0"
description = "Robot Control Package"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}